feat: Add PDF export functionality
This commit introduces the capability to export lesson data as a PDF.
It includes:
- Installation of `jspdf` and `jspdf-autotable` dependencies.
- Updates to `index.html` to include CDN links for the new libraries.
- Addition of a new `ExportForm` component for user interaction.
- Integration of an export button into the `Header` component.
- State management for the export form's visibility and filter options.
- Basic PDF generation logic using `jspdf-autotable` to include lesson details and summary.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "react-dom": "^19.2.0",
     "react": "^19.2.0",
-    "firebase": "^12.5.0"
+    "firebase": "^12.5.0",
+    "jspdf": "latest",
+    "jspdf-autotable": "latest"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
