feat: Update dependencies and refactor summary calculations
Updates dependencies to stable versions and refactors the summary calculations to include tax rate and net/gross invoiced income. The UI has also been slightly refined for a cleaner look.

--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-dom": "^19.2.0",
-    "react": "^19.2.0",
-    "firebase": "^12.5.0",
-    "jspdf": "latest",
-    "jspdf-autotable": "latest"
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "jspdf": "2.5.1",
+    "jspdf-autotable": "3.8.2",
+    "firebase": "^12.6.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
